# dice

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  flake.nix  package.nix
src/: cli.rs  faces.rs  lib.rs  main.rs  web.rs
