[package]
name = "dice"
version = "0.1.0"
authors = ["Elias Ainsworth <pilum-murialis.toge@proton.me>"]
edition = "2021"
# build = "build.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-logger = "0.5.1"
figlet-rs = "0.1.5"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
